tests/baselines/reference/implicitAnyInCatch(strict=true).errors.txt
implicitAnyInCatch.ts(3,9): error TS18046: 'error' is of type 'unknown'.


==== implicitAnyInCatch.ts (1 errors) ====
    // this should not be an error
    try { } catch (error) {
        if (error.number === -2147024809) { }
            ~~~~~
!!! error TS18046: 'error' is of type 'unknown'.
    }
    for (var key in this) { }
    
    class C {
        public temp() {
            for (var x in this) {
            }
        }
    }
    
    